--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,12 @@
 }
 
 .maxWidthWrapper {
+  max-width: 1024px;
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +26,14 @@
 }
 
 .characterWrapper {
+  /* min-height: 500px; */
+  top: 200px;
+  right: 200px;
+  width: 700px;
+  height: 1000;
+  position: fixed;
 }
 
 .controlColumn {
+  max-width: 50%;
 }
