--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,10 +1,12 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  /* isolation: isolate; */
 }
 
 .maxWidthWrapper {
   max-width: 1024px;
+  isolation: isolate;
 }
 
 .header {
@@ -26,14 +28,22 @@
 }
 
 .characterWrapper {
-  /* min-height: 500px; */
+  min-height: 500px;
   top: 200px;
   right: 200px;
   width: 700px;
-  height: 1000;
   position: fixed;
 }
 
 .controlColumn {
   max-width: 50%;
+}
+
+.greyBar {
+  position: absolute;
+  top: 60%;
+  left: 0;
+  right: 0;
+  height: 60%;
+  background-color: hsl(195deg, 20%, 86%);
 }
